<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true"
    app:cardBackgroundColor="@color/gray_bg"
    app:cardCornerRadius="@dimen/alert_corner_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/Send_new_password"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_email_registartion"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@drawable/text_edit_light_blue"
            android:backgroundTint="#FFA5C1E3"
            android:ems="10"

            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textAlignment="center"
            android:textColor="#626262"
            android:textSize="19dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView31" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_EmailIsntCorrect">

            <Button
                android:id="@+id/btn_registr"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_heighy"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_ok_blue_ripple"
                android:backgroundTint="@color/button_ok"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/send"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/cencel_registartion"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/button_heighy"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_cancel_white_ripple"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:text="@string/Your_email"
            android:textColor="#1E88E5"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/et_email_registartion"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/tv_no_such_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/No_such_account"
            android:textColor="#DD7D7A"
            android:textSize="12sp"
            android:textStyle="italic"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/et_email_registartion"
            app:layout_constraintTop_toBottomOf="@+id/et_email_registartion" />

        <TextView
            android:id="@+id/tv_EmailIsntCorrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_is_not_correct"
            android:textColor="#DD7D7A"
            android:textSize="12sp"
            android:textStyle="italic"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/et_email_registartion"
            app:layout_constraintTop_toBottomOf="@+id/et_email_registartion" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>